--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Perroflautum: lorem ipsum perrofláutico",
   "icons": [
     {
-      "src": "favicon.png",
+      "src": "https://progredemente.com/resources/perroflautum.png",
       "type": "image/png",
       "sizes": "192x192"
     }
